<resources>
    <string name="app_name">MusicApp</string>
    <string name="music_app">Music App</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="let_s_you_in">Let\'s you in</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="or">or</string>
    <string name="sign_in_with_password">Sign in with password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="login_to_your_account">Login to Your Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_the_password">Forgot the password</string>
    <string name="username">UserName</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="select_which_contact_details_should_we_use_to_reset_your_password">Select which contact details should we use to reset your password</string>
    <string name="via_sms">via SMS</string>
    <string name="via_email">via Email</string>
    <string name="continue_">Continue</string>
    <string name="enter_your_phone_number_to_receive_the_verification_code">Enter your phone number to receive the verification code:</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="enter_your_email_to_receive_the_verification_code">Enter your Email to receive the verification code:</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="username_cannot_be_left_blank">UserName cannot be left blank</string>
    <string name="fullname_cannot_be_left_blank">FullName cannot be left blank</string>
    <string name="email_cannot_be_left_blank">Email cannot be left blank</string>
    <string name="password_again_cannot_be_left_blank">PasswordAgain cannot be left blank</string>
    <string name="password_cannot_be_left_blank">Password cannot be left blank</string>
    <string name="username_or_password_is_incorrect">UserName or Password is incorrect</string>
    <string name="logging_in_please_wait">Logging in,please wait...</string>
    <string name="registering_please_wait">Registering,please wait...</string>
    <string name="logging">Logging in,please wait...</string>
    <string name="password_and_password_again_must_be_same">Password and passwordAgain must be same</string>
    <string name="home">Home</string>
    <string name="explore">Explore</string>
    <string name="library">Library</string>
    <string name="profile">Profile</string>
    <string name="login_failed">Login failed</string>
    <string name="logout">Logout</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="are_you_sure_you_want_to_exit_app">Are you sure you want to exit app?</string>
    <string name="cancel">Cancel</string>
    <string name="yes_logout">Yes,Logout</string>
    <string name="yes_exit_app">Yes,Exit app</string>
    <string name="trending_now">Trending Now</string>
    <string name="see_all">See All</string>
    <string name="popular_artists">Popular artists</string>
</resources>