<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".screen.sign_up.SignUpFragment">

    <ImageView
        android:id="@+id/backSignUp"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@drawable/back" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"

            android:src="@drawable/logo_blue" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Create Your Account"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_input"
            android:padding="5dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:src="@drawable/logo_blue" />

            <EditText
                android:id="@+id/userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/username"
                android:inputType="text"
                android:padding="8dp"
                android:textColorHint="@color/grey"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/bg_input"
            android:padding="5dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"

                android:src="@drawable/logo_blue" />

            <EditText
                android:id="@+id/fullName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/full_name"
                android:inputType="text"
                android:padding="8dp"
                android:textColorHint="@color/grey"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/bg_input"
            android:padding="5dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="25dp"
                android:layout_gravity="center"

                android:src="@drawable/mail" />

            <EditText
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="8dp"
                android:textColorHint="@color/grey"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/bg_input"
            android:padding="5dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:src="@drawable/password" />

            <EditText
                android:id="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColorHint="@color/grey"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/hidePassword"
                android:layout_width="30dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:src="@drawable/hide_pass" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/bg_input"
            android:padding="5dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:src="@drawable/password" />

            <EditText
                android:id="@+id/confirmPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColorHint="@color/grey"
                android:textSize="17sp" />

            <ImageView
                android:id="@+id/hideConfirmPassword"
                android:layout_width="30dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:src="@drawable/hide_pass" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center">

            <ImageView
                android:id="@+id/rememberMe"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/un_remember_password"
                android:src="@drawable/check" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/remember_me"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/signUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/background_button"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="8dp"
            android:gravity="center">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/don_t_have_an_account"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="-12dp"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/sign_in"
                android:textColor="#33EB75"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>