<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".screen.login.SignInFragment">

    <ImageView
        android:id="@+id/backSignIn"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@drawable/back" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:src="@drawable/logo_blue" />

        <TextView
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/login_to_your_account"
            android:textSize="25sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_input"
            android:padding="5dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="25dp"
                android:layout_gravity="center"

                android:src="@drawable/mail" />

            <EditText
                android:id="@+id/userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/email"
                android:padding="8dp"
                android:textColorHint="@color/grey"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_input"
            android:padding="5dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:src="@drawable/password" />

            <EditText
                android:id="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/password"
                android:padding="8dp"
                android:inputType="textPassword"
                android:textColorHint="@color/grey"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/hidePassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/hide_pass" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center">

            <ImageView
                android:id="@+id/rememberMe"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/un_remember_password"
                android:src="@drawable/check"
                 />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/remember_me"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/LoginAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@drawable/background_button"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/goForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/forgot_the_password"
            android:textColor="#06C149"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:gravity="center">

            <TextView
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="3"
                android:background="@color/teal_200" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center"
                android:text="or continue with"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="3"
                android:background="@color/teal_200" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="20"
            android:layout_marginTop="10dp"
            android:gravity="center">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="40dp"
                android:background="@drawable/bg_login_button"
                android:padding="8dp"
                android:layout_weight="1"
                android:src="@drawable/facebook" />
            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"/>

            <ImageView
                android:layout_width="90dp"
                android:layout_height="40dp"
                android:background="@drawable/bg_login_button"
                android:padding="8dp"
                android:layout_weight="1"
                android:src="@drawable/google" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:gravity="center"
            android:layout_marginTop="8dp">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/don_t_have_an_account"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/tvSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="-12dp"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/sign_up"
                android:textColor="#33EB75"
                android:textSize="16dp" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>