<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="60dp"
        android:layout_height="7dp"
        android:layout_gravity="center"
        android:background="#E6C6C6" />

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/nunito_extra_bold_800"
        android:text="Exit App"
        android:textColor="#BC6969"
        android:textSize="32sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="20dp"
        android:background="#DDBBBB" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/nunito_extra_bold_800"
        android:gravity="center"
        android:text="@string/are_you_sure_you_want_to_exit_app"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancelLogout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:fontFamily="@font/nunito_semi_bold_600"
            android:padding="16dp"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="#06C149"
            android:background="@drawable/bg_cancel_logout"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/yesLogout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:background="@drawable/background_button"
            android:fontFamily="@font/nunito_semi_bold_600"
            android:padding="16dp"
            android:text="@string/yes_exit_app"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:layout_marginBottom="20dp"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>